# Keemo

./: .gitmodules  .render.yaml  pyproject.toml  settings.gradle.kts
api-server/: .dockerignore  Dockerfile  README.md  main.py  pyvenv.cfg  requirements.txt
app/: build.gradle.kts
app/src/androidTest/java/com/keyboard/keemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/keyboard/keemo/: MainActivity.java  MyinputMethod.java
app/src/main/java/com/keyboard/keemo/network/: ApiClient.kt  PredictionApi.kt
app/src/main/java/com/keyboard/keemo/prediction/: PredictionManager.kt
app/src/main/res/anim/: fade_in_fast.xml  fade_out_fast.xml  keyboard_transition.xml  popup_enter.xml  popup_exit.xml
app/src/main/res/drawable/: ic_keyboard.xml  ic_shift_filled.xml  ic_shift_outline.xml  keemo_logo.xml  keemo_logo_sans_fond_1.xml  key_background.xml  key_preview_background.xml  key_special_background.xml  keyboard_background.xml  prediction_bar_background.xml  prediction_item_background.xml  space_key_background.xml  suggestion_background.xml
app/src/main/res/layout/: activity_main.xml  key_preview_layout.xml  keyboard.xml  keyboard_view.xml  prediction_bar.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: aglc_keys.xml  keys.xml  network_config.xml  special_chars.xml  special_chars_2.xml
app/src/test/java/com/keyboard/keemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
